Fixed scrollbar in guild leaderboard

--- a/src/app.scss
+++ b/src/app.scss
@@ -174,3 +174,11 @@ th.gridjs-th{
 .list-item:not(:last-child):not(.box) {
     border-bottom: 1px solid #e5e7eb1f;
 }
+
+.list-item:first-child{
+	border-top-left-radius: var(--radius-base);
+}
+
+.list-item:last-child{
+	border-bottom-left-radius: var(--radius-base);
+}
